FIX row-column gap in hebergements section

--- a/css/hebergements.css
+++ b/css/hebergements.css
@@ -7,7 +7,9 @@
   flex-wrap: wrap; /* Ensures cards wrap to the next row if they exceed the container width */
   justify-content: space-evenly; /* Distributes cards evenly in the container */
   max-width: 100%;
-  gap: 30px;
+  row-gap: 30px;
+  column-gap: 15px;
+
 }
 
 .card-hbr {
